--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -42,15 +42,10 @@
             <a class="navbar-brand" href="#">Bookmark List</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-            <form class="navbar-form navbar-right" role="form">
-                <div class="form-group">
-                    <input type="text" placeholder="Email" class="form-control">
-                </div>
-                <div class="form-group">
-                    <input type="password" placeholder="Password" class="form-control">
-                </div>
-                <button type="submit" class="btn btn-success">Sign in</button>
-            </form>
+
+            {% block toggle_login %}
+                {% include 'marcador/toggle_login.html' %}
+            {% endblock %}
         </div><!--/.navbar-collapse -->
     </div>
 </nav>
