--- a/mysite/marcador/templates/marcador/bookmark.html
+++ b/mysite/marcador/templates/marcador/bookmark.html
@@ -15,3 +15,8 @@
 <br>by <a href="{% url "bookmark_user" bookmark.owner.username %}">
     {{ bookmark.owner.username }}</a>
 {{ bookmark.date_created|timesince }} ago
+
+{% if bookmark.owner == user or user.is_superuser %}
+    <br>
+    <a class="btn btn-default" role="button" href="{% url "bookmark_edit"  bookmark.pk %}">Edit bookmark</a>
+{% endif %}
