--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -1,4 +1,6 @@
 {% load staticfiles %}
+{% load staticfiles marcador_tags %}
+
 <!doctype html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
@@ -39,7 +41,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Bookmark List</a>
+            <a class="navbar-brand" href="{% url "bookmark_list" %}">Bookmark List</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
 
@@ -53,11 +55,29 @@
 
 <div class="container">
 
-    <div>
-        {% block heading %}{% endblock %}
+    <div class="row">
+        <div class="col-md-12">
+            <div>
+                {% block heading %}{% endblock %}
+            </div>
+        </div>
     </div>
-    <div>
-        {% block content %}{% endblock %}
+    <div class="row">
+        <div class="col-md-8">
+            <div>
+                {% block content %}{% endblock %}
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="panel panel-primary">
+                <div class="panel-heading">Tag cloud</div>
+                <div class="panel-body">
+                    {% block sidebar %}
+                        {% tagcloud %}
+                    {% endblock %}
+                </div>
+            </div>
+        </div>
     </div>
     <hr>
 
